--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Evan Mitchell</h1>
 <p>This is my website.</p>
+<a href = "https://github.com/Evan-Mitchell20/Resume/blob/main/Resume_Evan_Mitchell_6_5_22.pdf">Resume</a>
 </body>
 </html>
