--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Evan Mitchell</h1>
 <p>This is my website.</p>
 <a href = "https://github.com/Evan-Mitchell20/Resume/blob/main/Resume_Evan_Mitchell_6_5_22.pdf">Resume</a>
+<iframe src="https://github.com/Evan-Mitchell20/Resume/blob/main/Resume_Evan_Mitchell_6_5_22.pdf" width="100%" height="500px"></iframe>
 </body>
 </html>
