--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <body>
 <h1>Evan Mitchell</h1>
 <p>This is my website.</p>
-<a href = "https://github.com/Evan-Mitchell20/Resume/blob/main/Resume_Evan_Mitchell_6_5_22.pdf">Resume</a>
-<iframe src="https://github.com/Evan-Mitchell20/Resume/blob/main/Resume_Evan_Mitchell_6_5_22.pdf#toolbar=0" width="100%" height="500px"></iframe>
+<iframe src="/Resume_Evan_Mitchell_6_5_22.pdf#toolbar=0" width="100%" height="500px"></iframe>
 </body>
 </html>
