--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Evan Mitchell</h1>
 <p>This is my website.</p>
-<iframe src="/Resume_Evan_Mitchell_6_5_22.pdf#toolbar=0" width="100%" height="500px"></iframe>
+<iframe src="https://Evan-Mitchell20.github.io/Resume_Evan_Mitchell_6_5_22.pdf#toolbar=0" width="100%" height="500px"></iframe>
 </body>
 </html>
