--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Evan Mitchell</h1>
-<p>This is my website.</p>
+<p>University of Massachusetts Lowell Class of 2021</p>
 <iframe src="https://Evan-Mitchell20.github.io/Resume_Evan_Mitchell_6_5_22.pdf#toolbar=0" width="100%" height="500px"></iframe>
 </body>
 </html>
