--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Evan Mitchell</h1>
 <p>University of Massachusetts Lowell Class of 2021</p>
-<iframe src="https://Evan-Mitchell20.github.io/Resume_Evan_Mitchell_6_5_22.pdf#toolbar=0" width="100%" height="500px"></iframe>
+<iframe src="https://Evan-Mitchell20.github.io/Resume_Evan_Mitchell_6_5_22.pdf#toolbar=0" width="100%" height="1000px"></iframe><br>
 <iframe src="https://Evan-Mitchell20.github.io/Evan_Mitchell_Portfolio.pdf#toolbar=0" width="100%" height="500px"></iframe>
 </body>
 </html>
