--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 <h1>Evan Mitchell</h1>
-<p>University of Massachusetts Lowell Class of 2021</p><br>
-<p>Email: ezanwmitchell@gmail.com</p><br>
-<p>Please find below a copy of my resume.</p><br>
+<p>University of Massachusetts Lowell Class of 2021</p>
+<p>Email: ezanwmitchell@gmail.com</p>
+<p>Please find below a copy of my resume.</p>
 <iframe src="https://Evan-Mitchell20.github.io/Resume_Evan_Mitchell_6_5_22.pdf#toolbar=0" width="100%" height="1200px"></iframe><br><br>
 <p>Please find below a copy of my Spring 2019 Portfolio project consisting of 7 different C++ programs.</p>
 <iframe src="https://Evan-Mitchell20.github.io/Evan_Mitchell_Portfolio.pdf#toolbar=0" width="100%" height="1200px"></iframe>
