--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    body {background-color: powderblue;}
+  </style>
 <body>
-<h1>Evan Mitchell</h1>
-<p>University of Massachusetts Lowell Class of 2021</p>
-<p>Email: ezanwmitchell@gmail.com</p>
-<p>Please find below a copy of my resume.</p>
+<h1>style="text-align: center" Evan Mitchell</h1>
+<p>style="text-align: center" University of Massachusetts Lowell Class of 2021</p>
+<p>style="text-align: center" Email: ezanwmitchell@gmail.com</p>
+<p>style="text-align: center" Please find below a copy of my resume.</p>
 <iframe src="https://Evan-Mitchell20.github.io/Resume_Evan_Mitchell_9_20_22.pdf#toolbar=0" width="100%" height="1200px"></iframe><br><br>
 <p>Please find below a copy of my Spring 2019 Portfolio project consisting of 7 different C++ programs.</p>
 <iframe src="https://Evan-Mitchell20.github.io/Evan_Mitchell_Portfolio.pdf#toolbar=0" width="100%" height="1200px"></iframe>
