--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     h1 {font-size: 40px, font-family: "Times New Roman", Times, serif;}
   </style>
 <body>
-<h1 class = "container>Evan Mitchell</h1>
+<h1 class = "container">Evan Mitchell</h1>
 <p>University of Massachusetts Lowell Class of 2021</p>
 <p>Email: ezanwmitchell@gmail.com</p>
 <p>Please find below a copy of my resume.</p>
