--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <style>
     body {background-color: powderblue;}
-    h1 {font-size: 40px, font-family: "Times New Roman", Times, serif;}
+    h1 {text-align: center, font-size: 40px, font-family: "Times New Roman", Times, serif;}
   </style>
 <body>
 <h1 class = "container">Evan Mitchell</h1>
